# Pangaea

./: .gitignore  README.md
.github/workflows/: check.yml  rust.yml
doc/: rust-setup.md
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/CreateProperty/: Cargo.toml
pallets/CreateProperty/src/: lib.rs
pallets/template/src/: lib.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: constants.rs  lib.rs
